2010-03-02  Raúl Mateos  <raulofpandora@gmail.com>

        * util/tentacle_serverd, util/pandora_server: Updated year. Changed
	spaces to tabs.

	* bin/tentacle_server: Updated year. Updated URL for documentation.

2010-02-27  Sancho Lerena <slerena@artica.es>

        * util/tentacle_serverd,
        util/pandora_server: Fixed "stop" problem in debian/ubuntu, which was
        due a problem in redefinition of several LSB functions, stop function
        was not working fine and exit condition was ignored.

2010-02-25  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Implemented new alert type "onChange".

2010-02-25  Pablo de la Concepción <pablo.concepcion@artica.es>

	* conf/pandora_server.conf: New option, update_parent to let the 
	agent update it's parent by sending the parent name on the XML.

	* lib/PandoraFMS/Config.pm: Support for new option update_parent.

	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/Dataserver.pm: Modified to
	update the parent of an agent at creation time and on update if 
	the update_parent parameter is set to 1

	* man/man3/PandoraFMS::Core.pm.3: Updated manpage with the new
	documentation of the interface

2010-02-24  Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/Dataserver.pm: Modified to
	update the parent of an agent if in learning mode.

	* man/man3/PandoraFMS::Core.pm.3: Updated manpage with the new
	parameter and improved documentation for pandora_update_agent

	* lib/PandoraFMS/Config.pm: Updated build

2010-02-23  Raúl Mateos  <raulofpandora@gmail.com>

	* lib/PandoraFMS/*.pm, DEBIAN/make_deb_package.sh, pandora_server_*: 
	Updated year / build. Some spaces to tabs.

2010-02-22  Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed bug #2926077 there were one 
	more place where the timestamp should be checked.

2010-02-22  Pablo de la Concepción <pablo.concepcion@artica.es>
